test/TestPhases/causality/invalid/functionInputOutputAliasing4.blc
function f(x: int32)(y: int32) returns int32
    y = 2
    y = x + y
    return y
end

@[EntryPoint]
activity A()() returns int32
    var b: int32 = 17
    await true
    var a: [20]int32
    a[f(b)(b)] = 8 // assignment, lhs issue
    return 0
end 